@@ -12,7 +12,7 @@ binmode STDOUT, ":utf8";
 
 my $j = AnyEvent->condvar;
 my $cl = Net::XMPP2::Client->new (debug => 1);
-$cl->set_presence ('away', 'I\'m a bot now.', -1);
+$cl->set_presence ('away', 'I\'m a bot now.', 1);
 $cl->add_account (@ARGV);
 $cl->reg_cb (
    connected => sub {
@@ -39,15 +39,13 @@ $cl->reg_cb (
 );
 
 $cl->reg_cb (contact_request_subscribe => sub {
-   my ($cl, $acc, $roster, $contact, $rdoit) = @_;
-   $$rdoit = 1;
+   my ($cl, $acc, $roster, $contact) = @_;
    $contact->send_subscribe;
-   1
+   0
 });
 
 $cl->reg_cb (contact_did_unsubscribe => sub {
    my ($cl, $acc, $roster, $contact, $rdoit) = @_;
-   $$rdoit = 1;
    1
 });
 
