@@ -5,6 +5,8 @@ Revision history for Net-XMPP2
            errorprone for the programmer (you don't have to return
            a true value now all the time and can call $self->unreg_me
            for unregistering a callback).
+           Because of this change send_*_hook and contact_did_* events
+           have changed their arguments.
          - implemented SAX event generator for easier integration
            with other XML libraries and generation of DOM.
          - added the possibility to completly restore the original
